--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
                     <th scope="col">Nom</th>
                     <th scope="col">Marque</th>
                     <th scope="col">Made in</th>
-                    <th scope="prix">Prix</th>
+                    <th scope="col">Prix</th>
                     <th scope="col">Action</th>
                 </tr>
                 </thead>
