--- a/src/main/resources/templates/edit_entree.html
+++ b/src/main/resources/templates/edit_entree.html
@@ -5,7 +5,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+        integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>entree</title>
 </head>
@@ -13,56 +21,63 @@
 <body>
 
 
-<div class="content">
+    <div class="content">
 
-    <div class="container">
-        <h2 class="mb-5">Créer un nouveau entree</h2>
-        <br/>
-        <form class="form" th:action="@{/enter/save_E}" th:object="${entree}" method="post">
-            <table class="table row">
-                <tr class="table-header">
-                    <td>Numero Entrée:</td>
-                    <td><input type="text" th:field="*{nent}"/></td>
-                </tr>
-                <tr >
-                    <td>Date:</td>
-                    <td><input type="date" th:field="*{date}"/></td>
-                </tr>
-                <tr >
-                    <td>Déscription:</td>
-                    <td>
-                        <textarea cols="30" rows="10" placeholder="Votre Déscription.." th:field="*{description}"></textarea>
-                    </td>
+        <div class="container">
+            <h2 class="mb-5">Modification d'une entrée</h2>
+            <br />
+            <form class="form" th:action="@{/enter/save_E}" th:object="${entree}" method="post">
+                <table class="table row">
+                    <tr class="table-header">
+                        <td>ID:</td>
+                        <td><input type="text" th:field="*{ident}" readonly="readonly" /></td>
+                    </tr>
+                    <tr>
+                        <td>Numero Entrée:</td>
+                        <td><input type="text" th:field="*{nent}" /></td>
+                    </tr>
+                    <tr>
+                        <td>Date:</td>
+                        <td><input type="date" th:field="*{date}" /></td>
+                    </tr>
+                    <tr>
+                        <td>Déscription:</td>
+                        <td>
+                            <textarea cols="30" rows="10" placeholder="Votre Déscription.."
+                                th:field="*{description}"></textarea>
+                        </td>
 
-                </tr>
+                    </tr>
 
-                <tr >
-                    <td>Montant:</td>
-                    <td><input type="text" th:field="*{montant}"/></td>
-                </tr>
-                <tr >
-                    <td>Utilisateur:</td>
-                    <td><input type="text" th:field="*{usr}"/></td>
-                </tr>
-                <tr >
-                    <td>Code:</td>
-                    <td><input type="text" th:field="*{code}"/></td>
-                </tr>
-                <tr >
-                    
-                    <td colspan="2"><button type="submit">Ajouter</button></td>
-                </tr>
-            </table>
-        </form>
+                    <tr>
+                        <td>Montant:</td>
+                        <td><input type="text" th:field="*{montant}" /></td>
+                    </tr>
+                    <tr>
+                        <td>Id Utilisateur:</td>
+                        <td><input type="text" th:field="*{utilisateur.idusr}" readonly="readonly" />
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>Code:</td>
+                        <td><input type="text" th:field="*{code}" /></td>
+                    </tr>
+                    <tr>
+
+                        <td colspan="2"><button type="submit">Ajouter</button></td>
+                    </tr>
+                </table>
+            </form>
+        </div>
     </div>
-</div>
 
 
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
