--- a/src/main/resources/templates/edit_produit.html
+++ b/src/main/resources/templates/edit_produit.html
@@ -5,7 +5,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+        integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Product</title>
 </head>
@@ -13,48 +21,48 @@
 <body>
 
 
-<div class="content">
+    <div class="content">
 
-    <div class="container">
-        <h2 class="mb-5">Modifier Produit</h2>
-        <br/>
-        <form class="form" th:action="@{/save}" th:object="${produit}" method="post">
-            <table class="table row">
-                <tr class="table-header">
-                    <td>ID:</td>
-                    <td><input type="text" th:field="*{id}" readonly="readonly"/></td>
-                </tr>
-                <tr >
-                    <td>Nom:</td>
-                    <td><input type="text" th:field="*{name}"/></td>
-                </tr>
-                <tr >
-                    <td>Firme:</td>
-                    <td><input type="text" th:field="*{brand}"/></td>
-                </tr>
-                <tr >
-                    <td>Fabriqué:</td>
-                    <td><input type="text" th:field="*{madein}"/></td>
-                </tr>
-                <tr >
-                    <td>Prix:</td>
-                    <td><input type="text" th:field="*{price}"/></td>
-                </tr>
-                <tr >
-                    
-                    <td colspan="2"><button type="submit">Ajouter</button></td>
-                </tr>
-            </table>
-        </form>
+        <div class="container">
+            <h2 class="mb-5">Modifier Produit</h2>
+            <br />
+            <form class="form" th:action="@{/save}" th:object="${produit}" method="post">
+                <table class="table row">
+                    <tr class="table-header">
+                        <td>ID:</td>
+                        <td><input type="text" th:field="*{id}" readonly="readonly" /></td>
+                    </tr>
+                    <tr>
+                        <td>Nom:</td>
+                        <td><input type="text" th:field="*{name}" /></td>
+                    </tr>
+                    <tr>
+                        <td>Firme:</td>
+                        <td><input type="text" th:field="*{brand}" /></td>
+                    </tr>
+                    <tr>
+                        <td>Fabriqué:</td>
+                        <td><input type="text" th:field="*{madein}" /></td>
+                    </tr>
+                    <tr>
+                        <td>Prix:</td>
+                        <td><input type="text" th:field="*{price}" /></td>
+                    </tr>
+                    <tr>
+
+                        <td colspan="2"><button type="submit">Ajouter</button></td>
+                    </tr>
+                </table>
+            </form>
+        </div>
     </div>
-</div>
 
 
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
