--- a/src/main/resources/templates/enter.html
+++ b/src/main/resources/templates/enter.html
@@ -6,7 +6,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+        integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>entree</title>
 </head>
@@ -14,62 +22,69 @@
 <body>
 
 
-<div class="content">
+    <div class="content">
 
-    <div class="container">
-        <h2 class="mb-5">Entrée List</h2>
-        <a href="/enter/new_E">Créer une nouvelle Entrée</a>
-        <div class="table-responsive">
+        <div class="container">
+            <h2 class="mb-5">Liste Entrée</h2>
+            <a href="/enter/new_E">Créer une nouvelle Entrée</a>
+            <form th:action="@{/enter/search}" method="get">
+                <input type="text" name="nent" placeholder="Recherchez une Entrée avec le [numéro_entrée] " size="50">
+                <button type="submit" class="btn btn-info">Search</button>
 
-            <table class="table custom-table">
-                <thead>
-                <tr>
-                   
-                    <th scope="col">id</th>
-                    <th scope="col">Numero Entrée</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Description</th>
-                    <th scope="prix">Montant</th>
-                    <th scope="prix">Utilisateur</th>
-                    <th scope="prix">Code</th>
-                    <th scope="col">Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="entree : ${listEntrees}" bgcolor="#f0f8ff" class="col-md-4 my-1 odd-row-color">
-                    
-                    <td th:text="${entree.ident}">ID</td>
-                    <td th:text="${entree.nent}">Numero Entrée</td>
-                    <td th:text="${#dates.format(entree.date, 'dd-MMM-yyyy')}">Date</td>
-                    <td th:text="${entree.description}">Description</td>
-                    <td th:text="${#numbers.formatCurrency(entree.montant)}">Montant</td>
-                    <td th:text="${entree.usr}">Utilisateur</td>
-                    <td th:text="${entree.code}">Code</td>
-                    
+            </form>
+            <br />
+            <div class="table-responsive">
 
-                        <td >
-                            <a th:href="@{|/enter/modif/${entree.ident}|}" th:text="Modifier">
-                                Modifier
-                             </a>
-          
-                                <a th:href="@{|/enter/supr/${entree.ident}|}" th:text="Supprimer">
-                                   Supprimer
-                            </a>
-                        
-                        </td>  
-                </tr>
-                </tbody>
-            </table>
+
+                <table class="table custom-table">
+                    <thead>
+                        <tr>
+
+                            <th scope="col">id</th>
+                            <th scope="col">Numero Entrée</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Description</th>
+                            <th scope="prix">Montant</th>
+                            <th scope="prix">Utilisateur</th>
+                            <th scope="prix">Code</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="entree : ${listEntrees}" bgcolor="#f0f8ff" class="col-md-4 my-1 odd-row-color">
+
+                            <td th:text="${entree.ident}">ID</td>
+                            <td th:text="${entree.nent}">Numero Entrée</td>
+                            <td th:text="${#dates.format(entree.date, 'dd-MMM-yyyy')}">Date</td>
+                            <td th:text="${entree.description}">Description</td>
+                            <td th:text="${#numbers.formatCurrency(entree.montant)}">Montant</td>
+                            <td th:text="${entree.utilisateur.nom}">Utilisateur</td>
+                            <td th:text="${entree.code}">Code</td>
+
+
+                            <td>
+                                <a th:href="@{|/enter/modif/${entree.ident}|}">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+
+                                <a th:href="@{|/enter/supr/${entree.ident}|}">
+                                    <i class="fa fa-remove"></i>
+                                </a>
+
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
 
 
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
